editor extra margin correction

--- a/static/css/bootcamp.css
+++ b/static/css/bootcamp.css
@@ -122,3 +122,8 @@ p img{
   max-width:100%;
   height:auto;
 }
+
+.wmd-panel{
+  margin-right: 0px !important;
+  margin-left: 0px !important;
+}
